# smart-file-organizer

./: .gitignore  README.md  pyproject.toml
examples/: rules.json
organizer/: __init__.py  __main__.py  cli.py  core.py  manifest.py  rules.py
tests/: test_core.py
